# comics

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: comics_view.dart
lib/screens/: comic_info_screen.dart  comic_reader_screen.dart  comics_screen.dart  home_screen.dart  init_screen.dart  search_screen.dart  settings_screen.dart
lib/src/: cached_image_widget.dart  history_manager.dart  image_cache_manager.dart  reader_progress.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: crypto_api.rs  http_api.rs  image_api.rs  image_cache_api.rs  init.rs  mod.rs  module_api.rs  property_api.rs  proxy_api.rs
rust/src/crypto/: hash.rs  mod.rs
rust/src/database/: connection.rs  mod.rs
rust/src/database/entities/: image_cache.rs  mod.rs  module_info.rs  property.rs  web_cache.rs
rust/src/database/migration/: m20241205_000001_create_tables.rs  m20241211_000001_add_source_url.rs  mod.rs
rust/src/http/: client.rs  mod.rs  proxy.rs
rust/src/js_engine/: mod.rs  module_loader.rs  runtime.rs
rust/src/js_engine/bindings/: console.rs  crypto.rs  html.rs  http.rs  image.rs  mod.rs  storage.rs
rust/src/modules/: manager.rs  mod.rs  types.rs
rust_builder/: pubspec.yaml
sdk/: README.md  package.json  tsconfig.json
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+32 files in other folders)
