[package]
name = "rust_lib_comics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# JS Engine
rquickjs = { version = "0.9", features = ["bindgen", "loader", "classes", "properties", "parallel", "futures"] }

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"], default-features = false }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"], default-features = false }

# HTTP
reqwest = { version = "0.12", features = ["native-tls", "json", "cookies", "gzip", "brotli"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.20"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
md5 = "0.7"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11"

# Crypto
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"

# HTML Parser
scraper = "0.22"

# Image Processing
image = "0.25"
png = "0.17"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
